# optimacros_practice

./: .~lock.Этап_2_Разработка_системы_валдиации.odt#  README.md  Этап_2_Разработка_системы_валдиации.odt
reports/: Этап_1_Теоретическое_исследование.odt  Этап_2_Разработка_системы_валдиации.odt
test/: om_models.csv  test.py
validation_system/: .gitignore  pyproject.toml
validation_system/docs/: main.md
validation_system/examples/: data_manipulation_example.ipynb  models_comparision_example.ipynb  om_correct.csv  om_incorrect.csv  validation_example.ipynb
validation_system/validation_system/: dataloader.py  extraction.py  model_comparison.py  model_comparition.py  models.py  validation.py
validation_system/validation_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
