[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "validation_system"
version = "0.1.0"
description = "Пакет для валидации гиперпараметров"
authors = [{ name = "Sergey", email = "mserg04@gmail.com" }]
readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]
test = ["pytest-cov"]               