[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "validation_system"
version = "0.1.0"
description = "Пакет для валидации гиперпараметров"
authors = [{ name = "Sergey", email = "mserg04@gmail.com" }]
readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.25.0",
    "scklearn==1.5.2",
    "statsmodels==0.14.4",
    "catboost==1.2.7",
    "prophet==1.1.6",
    "symfit==0.5.6",
    "pandas",
    "numpy",
    "json",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]
test = ["pytest-cov"]               